Fixed missalignment with Submit button

--- a/appserver/static/lookup_configure.css
+++ b/appserver/static/lookup_configure.css
@@ -17,6 +17,9 @@ span[id^="inputWrapper"] .select2-container {
 .form-group {
     clear: both;
 }
+#submitData {
+    margin: 0 !important;
+}
 /*Table*/
 #lookupTable tr.status-warning td {
     background-color: orangered !Important;
